tests/paczka1/fuzzy1/53523004.err
Error in line 1: sLeoGJ S357 9,1
Error in line 3: C7DMMA9i S996 2,93
Error in line 14: S357 S996 7,8
Error in line 12: lMg7N S470 77,5
Error in line 16: lMg7N S357 38,3
Error in line 18: Dh126Ujmrm4 S470 39,2
Error in line 19: lMg7N S470 6,9
Error in line 35: Dh126Ujmrm4 S996 70,8
